// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`block > orientation > horizontal > ansi 1`] = `"a[31mb[39mc"`;

exports[`render > block > basic > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > basic > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > basic > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
bar
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > border > corners > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
o---o
|foo|
o---o
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > border > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
---
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > border > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
|foo|
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > border > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
---
|abc|
---
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > builder > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > builder > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING


foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
  bar
  baz
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > with border > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

   ---
   |foo|
   ---
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > with padding > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > margin > with padding and border > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING

  ---------
  | content |
  ---------
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > orientation > horizontal > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
1aaaaa2aaaa 
1b    2b    
1ccccc2ccccc
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > padding > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING


foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > padding > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo


╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > padding > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > block > span > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo bar
---
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > horizontal padding > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
x  x
╚══════════════════════════════════════════════════╝"
`;

exports[`render > list > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
* foo
* bar
╚══════════════════════════════════════════════════╝"
`;

exports[`render > list > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
* foo
* bar
  baz
  qux
* zod
╚══════════════════════════════════════════════════╝"
`;

exports[`render > list > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
(0) foo
(1) zod
╚══════════════════════════════════════════════════╝"
`;

exports[`render > list > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
0 a
1 b
2 c
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > column width > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha            | bravo               | charlieeeeeeeeeeeeeeeeeee | delta
--------------------------------------------------------------------------
a1               | b1                  | c1                        | d1   
--------------------------------------------------------------------------
a222222222222222 | b2                  | c2                        | d2   
--------------------------------------------------------------------------
a3               | b333333333333333333 | c3                        | d3
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > column width > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha            | bravo               | charlieeeeeeeeeeeeeeeeeee | delta
--------------------------------------------------------------------------
a1               | b1                  | c1                        | d1   
--------------------------------------------------------------------------
a222222222222222 | b2                  | c2                        | d2   
a2               |                     |                           |      
--------------------------------------------------------------------------
a3               | b333333333333333333 | c3                        | d3
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > column width > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha | beta  
apple | banana
ankle |
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > headers > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha | bravo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > headers > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha           | bravo
                | ~~~~~
-----------------------
a               | b
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > rows > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha | bravo
-------------
a     | b
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > rows > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha | bravo
-----------------
a     | b     | c
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > rows > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
a1 | b1
-------
a3 | b3
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > separators > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha | bravo | charlie
                       
a     | b
╚══════════════════════════════════════════════════╝"
`;

exports[`render > table > separators > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
alpha bravo charlie
-------------------
a     b
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
foo
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text wrapping > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
xxxxxxxxxxxxxxxxxxxx
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text wrapping > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[31mxxxxxxxxxxxxxxxxxxxx[39m
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text wrapping > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
xxxxxxxxxxxxxxxxxxx-
xxxxxxxxxxxxxxxxxxx-
xxxxxxxxxxxx
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text wrapping > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
xxxxxxxxxxxxxxxxxxx-
xxxxxxxxxxxxxxxxxxx-
xxxxxxxxxxxx
╚══════════════════════════════════════════════════╝"
`;

exports[`render > text wrapping > render({ block: [Function: block], set: [Function: set], table: [Function: table], list...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
col1  | col2                
----------------------------
short | xxxxxxxxxxxxxxxxxxx-
      | xxxxxxxxxxxxxxxxxxx-
      | xxxxxxxxxxxx
╚══════════════════════════════════════════════════╝"
`;
